<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_top_r20_gray_800"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="24dp"
    android:paddingBottom="12dp"
    tools:context=".onboarding.OnboardingBottomSheetFragment">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_bottom_sheet_title"
        android:textAppearance="@style/TextAppearance.SOPT.HeadLineLarge"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_onboarding"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/image_onboarding_bottom_sheet"
        android:scaleType="center"
        app:layout_constraintDimensionRatio="1.7"
        app:layout_constraintEnd_toEndOf="@id/textView_title"
        app:layout_constraintStart_toStartOf="@id/textView_title"
        app:layout_constraintTop_toBottomOf="@id/textView_title" />

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/onboarding_bottom_sheet_content"
        android:textAppearance="@style/TextAppearance.SOPT.BodyMedium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/imageView_onboarding"
        app:layout_constraintStart_toStartOf="@id/imageView_onboarding"
        app:layout_constraintTop_toBottomOf="@id/imageView_onboarding" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_confirm"
        app:layout_constraintTop_toBottomOf="@id/textView_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/textView_description"
        app:layout_constraintEnd_toEndOf="@id/textView_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/rectangle_all_r10_white"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:text="@string/onboarding_bottom_sheet_confirm"
        android:textAppearance="@style/TextAppearance.SOPT.BodyMedium"
        android:textColor="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>