<?xml version="1.0" encoding="utf-8"?>
<!--
    MIT License

    Copyright (c) 2024 SOPT Makers

    Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to deal
    in the Software without restriction, including without limitation the rights
    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    copies of the Software, and to permit persons to whom the Software is
    furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all
    copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
    SOFTWARE.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mds_gray_950"
    android:orientation="vertical"
    tools:context=".onboarding.OnboardingActivity">

    <include
        android:id="@+id/include_app_bar"
        layout="@layout/include_app_bar_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/onboarding_title"
        android:textAppearance="@style/TextAppearance.SOPT.HeadLineMediumLarge"
        android:textColor="@color/mds_gray_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include_app_bar"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/viewpager_dots_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/textView_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_recyclerViewContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangle_all_r8_gray_900"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/viewpager_dots_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_title">

        <TextView
            android:id="@+id/textView_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/onboarding_content"
            android:textAppearance="@style/TextAppearance.SOPT.HeadLineMedium"
            android:textColor="@color/mds_gray_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadingEdgeLength="10dp"
                android:requiresFadingEdge="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
        android:id="@+id/viewpager_dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dotsColor="@color/gray_10"
        app:dotsStrokeColor="@color/mds_gray_500"
        app:dotsSize="8dp"
        app:dotsSpacing="10dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView_swipeToRefresh"/>

    <TextView
        android:id="@+id/textView_swipeToRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/onboarding_swipe_to_refresh"
        android:textAppearance="@style/TextAppearance.SOPT.BodyMedium"
        android:textColor="@color/mds_gray_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_lottie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/mds_gray_950_alpha80"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view_lottie"
            android:layout_width="108dp"
            android:layout_height="88dp"
            android:layout_marginTop="280dp"
            app:layout_constraintBottom_toTopOf="@id/tv_lottie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_rawRes="@raw/friendcomplete"
            app:lottie_repeatCount="2" />

        <TextView
            android:id="@+id/tv_lottie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/suit_bold"
            android:gravity="center"
            android:lineSpacingExtra="6dp"
            android:textColor="@color/mds_gray_10"
            android:textFontWeight="600"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="@id/animation_view_lottie"
            app:layout_constraintStart_toStartOf="@id/animation_view_lottie"
            app:layout_constraintTop_toBottomOf="@id/animation_view_lottie"
            tools:text="찌르기 답장으로\n김다혜님과 친구가 되었어요" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>